# tuxs-config-types

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  macros.rs  size_config.rs
src/chrono_types/: duration.rs  mod.rs
