[package]
name = "config_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4", optional = true}
serde = {version = "1.0", features = ["derive"], optional = true}
regex = { version = "1" , optional = true}
once_cell = { version = "1", optional = true }
thiserror = "1"
strum = { version = "0.25",features = ["derive"], optional = true }
[dev-dependencies]
rand = "0.8"
serde_json = "1"
[features]
default = ["chrono", "serde", "regex_types"]
regex_types=["once_cell", "regex"]
