[package]
name = "tuxs-config-types"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wyatt-herkamp/tuxs-config-types"
rust-version = "1.70"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0" }
regex = { version = "1" }
thiserror = "1"
strum = { version = "0.26", features = ["derive"] }


chrono = { version = "0.4", optional = true }
digestible = { version = "0.2", optional = true }

derive_more = { version = "1", features = [
    "from",
    "as_ref",
    "deref",
    "deref_mut",
    "into",
] }
[dev-dependencies]
rand = "0.8"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
